apollo-router/tests/snapshots/lifecycle_tests__cli_config_preview.snap
---
source: apollo-router/tests/lifecycle_tests.rs
expression: "command_output(Command::new(IntegrationTest::router_location()).arg(\"config\").arg(\"preview\")).await"
---
Success: true
Exit code: Some(0)
stderr:

stdout:
This Router version has no preview configuration

