apollo-router/tests/snapshots/lifecycle_tests__experimental_notice.snap
---
source: apollo-router/tests/lifecycle_tests.rs
expression: "logs.join(\"\\n\")"
---
INFO: Apollo Router v1.14.0 // (c) Apollo Graph, Inc. // Licensed as ELv2 (https://go.apollo.dev/elv2)
INFO: Anonymous usage data collection is disabled.
INFO: You're using some "experimental" features of the Apollo Router (those which have their configuration prefixed by "experimental_").
We may make breaking changes in future releases. To help us design the stable version we need your feedback.
Here is a list of links where you can give your opinion:

	- experimental_logging: https://github.com/apollographql/router/discussions/1961

For more information about launch stages, please see the documentation here: https://www.apollographql.com/docs/resources/product-launch-stages/
INFO: Health check endpoint exposed at http://127.0.0.1:8088/health
INFO: GraphQL endpoint exposed at http://127.0.0.1:4000/ 🚀
INFO: shutting down
INFO: all connections shut down
INFO: stopped
