apollo-router/tests/snapshots/lifecycle_tests__graceful_shutdown.snap
---
source: apollo-router/tests/lifecycle_tests.rs
expression: "serde_json::from_slice::<graphql::Response>(&res.bytes().await.unwrap()).unwrap()"
---
{
  "data": {
    "currentUser": {
      "id": 1
    }
  }
}
